# ocstack

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
docs/: README_MCP.md  minor_update.md
examples/: README.md
examples/openstack-mcp-server/: Makefile  README.md  mcp_types.py  openstack_tools.py  pyproject.toml  requirements.txt  server.py  start.sh
hack/: run_server.sh
llm/: gemini.go  llamacpp.go  ollama.go  provider.go
mcp/: adapter.go  client.go  go.mod  transport.go  types.go
pkg/ocstack/: command.go  const.go  term.go  tools.go  utils.go
session/: session.go
template/: template.go
template/resources/: agent.tmpl  default.tmpl  execResult.tmpl
templates/: template.go
templates/resources/: default.tmpl
tests/: test_confirmation.exp  test_gemini_collective.exp  test_gemini_function_analysis.exp  test_gemini_recommendations.exp  test_multi_tool.sh  test_with_agent_template.exp
tools/: tools.go  utils.go
tools/local/: openstack.json  tools.json
